--- a/practice.css
+++ b/practice.css
@@ -11,6 +11,24 @@ main {
 footer {
   flex: 0, 50px;
 }
+.top-bar {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+menu {
+  padding-left: 80px;
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  align-items: center;
+  gap: 3.5em;
+  font-size: 1.5vw;
+  align-items: center;
+  justify-content: center;
+}
 .row {
     display: flex;
     background-color: white;
