--- a/practice.css
+++ b/practice.css
@@ -1,6 +1,8 @@
 body {
   display: flex;
   flex-direction:column;
+  background-color: #CC7A56;
+  color: white;
 }
 header {
   flex: 0, 75px;
@@ -50,18 +52,6 @@ menu {
   img {
     border-radius: 10px;
   }
- 
-  header {
-    flex: 0 80px;
-  }
-  
-  footer {
-    flex: 0 30px;
-  }
-  body {
-    background-color: #CC7A56;
-    color: white;
-  }
   .users {
     text-align: right;
     font-size: 1vw;
@@ -77,4 +67,17 @@ menu {
     flex-direction: row;
     align-items: center;
     gap: 1em;
+  }
+  h3 {
+    font-size: 1.5vw;
+  }
+  p {
+    font-size: 1vw;
+  }
+  .footer-nav {
+    display: flex;
+    flex-direction: row;
+    gap: 3em;
+    justify-content: center;
+    align-items: center;
   }
