--- a/practice.css
+++ b/practice.css
@@ -125,3 +125,15 @@ menu {
   h2 {
     font-size: 2vw;
   }
+  .total {
+    height: 30px;
+    width: 30px;
+    padding: 0px;
+    border-radius: 5px;
+    border-style: none;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    margin-left: 5px;
+    margin-right: 10px;
+    justify-content: center;
+    text-align: center;
+  }
