updated progress bars

--- a/practice.css
+++ b/practice.css
@@ -20,6 +20,7 @@ footer {
 .footer-nav a {
   text-decoration: none;
   color:#3f5a36;
+  font-size: 1.5vw;
 }
 .top-bar {
   flex: 1;
@@ -62,7 +63,7 @@ menu {
   }
   .users {
     text-align: right;
-    font-size: 1vw;
+    font-size: 1.2vw;
     display: flex;
     position: absolute;
     right: 1%;
@@ -82,7 +83,7 @@ menu {
     font-size: 1.5vw;
   }
   p {
-    font-size: 1vw;
+    font-size: 1.4vw;
   }
   .footer-nav {
     display: flex;
@@ -159,4 +160,10 @@ menu {
     text-decoration: none;
     color: white;
   }
-  
+  .column a {
+    text-decoration: none;
+    color:#3f5a36;
+  }
+ progress {
+  width: 100%;
+ }
