--- a/practice.css
+++ b/practice.css
@@ -193,3 +193,32 @@ menu {
  tr {
   width: 30%;
  }
+ .round {
+  background-color:#3f5a36;
+  color: white;
+  border-radius: 50%;
+  text-align: center;
+  height: 20px;
+  justify-content: center;
+ }
+ main a {
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 16px;
+ }
+ .flash-content {
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+  width: 90%;
+  height: 80%;
+  gap: 1em;
+  justify-content: center;
+  align-items: center;
+ }
+ .card {
+  padding: 200px;
+  background-color: white;
+  color:#3f5a36;
+  text-align: center;
+ }
