--- a/practice.css
+++ b/practice.css
@@ -221,4 +221,18 @@ menu {
   background-color: white;
   color:#3f5a36;
   text-align: center;
+  font-size: 3vw;
+  margin-bottom: 10px;
+ }
+ .flashcard {
+  text-align: center;
+ }
+ .see {
+  background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+  cursor: pointer;
+	outline: inherit;
  }
