changed practice to main css

--- a/main.css
+++ b/main.css
@@ -236,3 +236,14 @@ menu {
   cursor: pointer;
 	outline: inherit;
  }
+ @media (max-height: 600px) {
+  header {
+    display: none;
+  }
+  footer {
+    display: none;
+  }
+  main {
+    flex: 1 100vh;
+  }
+}
