--- a/main.css
+++ b/main.css
@@ -246,4 +246,20 @@ menu {
   main {
     flex: 1 100vh;
   }
+  
+}
+@media (max-width: 900px) {
+  .card {
+    padding:100px;
+  }
+  table {
+    width: 100px;
+  }
+  .row {
+    flex-direction: column;
+    align-items: center;
+  }
+  .column {
+    width: 400px;
+  }
 }
