--- a/main.css
+++ b/main.css
@@ -194,12 +194,15 @@ menu {
   width: 30%;
  }
  .round {
-  background-color:#3f5a36;
-  color: white;
-  border-radius: 50%;
-  text-align: center;
-  height: 20px;
-  justify-content: center;
+    border-style: none;
+    background-color:#3f5a36;
+    color: white;
+    border-radius: 50%;
+    text-align: center;
+    height: 40px;
+    width: 40px;
+    justify-content: center;
+    font-size: 20px;
  }
  main a {
   text-decoration: none;
