--- a/main.css
+++ b/main.css
@@ -203,6 +203,7 @@ menu {
     width: 40px;
     justify-content: center;
     font-size: 20px;
+    cursor: pointer;
  }
  main a {
   text-decoration: none;
